--- a/server/.env.example
+++ b/server/.env.example
@@ -11,6 +11,7 @@ DB_PASSWORD=your-database-password
 # Supabase Configuration (if using Supabase)
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
@@ -26,3 +27,8 @@ CLIENT_URL=http://localhost:5173
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Admin User Configuration (Optional - will use defaults if not set)
+ADMIN_EMAIL=admin@zineshop.com
+ADMIN_PASSWORD=your-secure-admin-password
+ADMIN_FULL_NAME=Admin User
