--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "prebuild": "npm run clean",
     "postbuild": "echo \"Build completed successfully\"",
     "type-check": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:production": "NODE_ENV=production node dist/server.js",
+    "build:production": "NODE_ENV=production npm run build"
   },
   "keywords": [
     "express",
